<resources>
    <string name="app_name">EjerciciosDeIntroduccion</string>
    <string name="btnEjercicio1">Ejercicio 1</string>
    <string name="btnEjercicio2">Ejercicio 2</string>
    <string name="btnEjercicio3">Ejercicio 3</string>
    <string name="btnEjercicio4">Ejercicio 4</string>
    <string name="title_activity_ejercicio1">Ejercicio1Activity</string>
    <string name="title_activity_ejercicio2">Ejercicio2Activity</string>
    <string name="title_activity_ejercicio3">Ejercicio3Activity</string>
    <string name="title_activity_ejecicio4">Ejecicio4Activity</string>
    <string name="txvValorConversion"><![CDATA[Valor Conversion Dolar -> Euro]]></string>
    <string name="edtValorConversion">0.85</string>
    <string name="txvWeb">Indique un sitio web</string>
    <string name="btnIr">Ir</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="btnElefante">Ver elefante</string>
    <string name="btnLeon">Ver Leon</string>
    <string name="btnTigre">Ver Tigre</string>
    <string name="txvMensaje">Se ha generado aleatoriamente un número entre 0 y 100</string>
    <string name="txvIntentalo">Intenta adivinarlo:</string>
    <string name="btnProbar">Probar</string>
    <string name="btnNuevoNumero">Generar nuevo número aleatorio</string>
</resources>
