<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.ejerciciosdeintroduccion.Ejercicio4Activity">
    <Button
        android:id="@+id/btnElefante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnElefante"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnLeon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLeon"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnTigre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTigre"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/elefante"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/leon"
        android:layout_below="@+id/btnElefante"
        android:layout_alignStart="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/tigre"
        android:layout_below="@+id/btnLeon"
        android:layout_alignStart="@+id/imageView2" />
</RelativeLayout>
